--- a/css/styles.css
+++ b/css/styles.css
@@ -242,6 +242,32 @@ h6 {
 }
 
 /*Inicio media queris */
+@media only screen and (max-width: 1000px) {
+
+    .content {
+        display: block;
+        }
+
+    .content_aside {
+        display: flex;
+        height: 100%;
+        width: 100%;
+        flex-direction: row;
+
+        position: -webkit-sticky; /* Safari */
+        position: sticky;
+        left: 0;
+    }
+
+    .content_aside-info {
+        margin-left: 30px;
+    }
+
+    .content_aside>figure>img {
+        width: 250px;
+        height: 250px;
+    }
+}
 
 @media only screen and (max-width: 800px) {
     .content {
@@ -252,50 +278,31 @@ h6 {
         margin-top: 30px;
     }
 
-    .content_aside {
-        display: flex;
-        height: 70%;
-        width: 100%;
-        flex-direction: row;
-    }
-
-    .content_aside-info {
-        margin-left: 60px;
-    }
-
-    .content_aside>figure>img {
-        width: 300px;
-        height: 300px;
-    }
-
     .content_section-cards {
         margin-right: 0px;
     }
 
     .content_section-cards--text {
-        width: auto;
+        width: 200px;
     }
 }
 
-@media only screen and (max-width: 770px) {
-    .content_aside {
-        height: 40%;
-    }
+@media only screen and (max-width: 730px) {
 
     .content_section-cards--text {
         width: 250px;
-        margin-right: 80px;
+        margin-right: 30px;
     }
 
     .content_skills-container {
-        margin-right: 60px;
+        margin-right: 30px;
     }
 
 }
 
 @media only screen and (max-width: 650px) {
     .content_aside {
-        height: 100%;
+        height: 50%;
     }
 
     .content_aside-info {
@@ -303,8 +310,8 @@ h6 {
     }
 
     .content_aside>figure>img {
-        width: 220px;
-        height: 220px;
+        width: 200px;
+        height: 200px;
     }
 
     .content_section-cards--text {
@@ -324,11 +331,10 @@ h6 {
     .content_skills-level--padding, .content_skills-level--padding2 {
         padding-bottom: 10px;
         }
-    
 
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 560px) {
     .content_aside {
         display: flex;
         flex-direction: column;
@@ -361,19 +367,19 @@ h6 {
         }
 
     .content_skills-level--orange {
-        width: 400px;
+        width: 300px;
         }
 
     .content_skills-level--violet {
-        width: 250px;
+        width: 180px;
         }
 
     .content_skills-level--violet0 {
-        width: 220px;
+        width: 150px;
         }
 
     .content_skills-level--violet1 {
-        width: 200px;
+        width: 120px;
         }
 
     .footer {
@@ -395,7 +401,7 @@ h6 {
     }
 }
 
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 450px) {
     .content_skills-level--orange {
         width: 300px;
         }
@@ -519,10 +525,6 @@ h6 {
         flex-direction: row;
         }
 
-    .content_aside-info {
-        padding-left: 40px;
-        }
-
     .content_aside>figure>img {
         height: 250px;
         width: 250px;
@@ -546,9 +548,6 @@ h6 {
 }
 
 @media (orientation:landscape) and (max-width: 740px) {
-    .content_aside {
-        height: 100%;
-    }
 
     .content_aside-info {
         padding-left: 0px;
@@ -567,19 +566,19 @@ h6 {
         }
 
     .content_skills-level--orange {
-        width: 600px;
+        width: 200px;
         }
 
     .content_skills-level--violet {
-        width: 350px;
+        width: 130px;
         }
 
     .content_skills-level--violet0 {
-        width: 330px;
+        width: 100px;
         }
 
     .content_skills-level--violet1 {
-        width: 340px;
+        width: 80px;
         }
 }
 
